@@ -11,6 +11,8 @@
   the configuration page.
 : Multiple bugs related to the bug query page fixed.
 : Fixed a rendering problem with bug comments.
+: Added the ability to create user groups and restrict project visibility based
+  on those groups.
 
 -- 0.5.1 -- 11 Nov 2001
 : Fixed a bug (introduced in 0.5.0) with severity color not being pulled in
